--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="tap_now_title">Tap Now!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="nfc_tag">NFC Tag ID: </string>
+    <string name="product_info">Product Info: </string>
+
 </resources>
