Integrating knock control.  Also, changing to target Android SDK 16, with necessary changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
 
     <string name="nfc_tag">NFC Tag ID: </string>
     <string name="product_info">Product Info: </string>
-
+    <string name="nutrition_info">Nutrition Info: </string>
 </resources>
