--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,16 @@
     <string name="copyright">Copyright 2016 Insight</string>
     <string name="app_name">TouchVision</string>
 
-    <string name="hello_world">Hello world!</string>
+    //CONSTANTS
+    <string name="EXTRA_VWAND">vwand_instance</string>
+    <string name="EXTRA_T2S">t2s_instance</string>
+
     <string name="tap_now_title">Tap Now!</string>
     <string name="action_settings">Settings</string>
 
     <string name="nfc_tag">NFC Tag ID: </string>
     <string name="product_info">Product Info: </string>
     <string name="title_activity_initial">InitialActivity</string>
+    <string name="title_activity_v_wand_connect">vWandConnectActivity</string>
 
 </resources>
