--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TouchVision</string>
+    <string name="app_name">Insight</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="tap_now_title">Tap Now!</string>
